# mcp-explorium

./: .gitignore  Dockerfile  LICENSE  README.md  agent_dockerfile  debug_client.py  docker-entrypoint.sh  entrypoint.sh  langgraph.json  main.py  manifest.json  package-lock.json  package.json  pyproject.toml  research_agent.py  research_graph.py  research_server.py  server.json  smithery.yaml
.github/: CODEOWNERS
.github/workflows/: publish.yml
agent-ui/: .env  index.html  package.json  pnpm-lock.yaml
agent-ui/src/: App.tsx  index.css  store.ts
agent-ui/src/components/: ApiKeyInput.tsx  ChatEmptyState.tsx  ChatInput.tsx  ChatMessages.tsx
agent-ui/src/components/ai/: TextMessage.tsx  toolTypes.ts
agent-ui/src/components/ui/: button.tsx
agent-ui/src/screens/: ApiKeyInputScreen.tsx  ChatScreen.tsx
docs/: session_storage.md
server/: index.js
src/explorium_mcp_server/: __init__.py  __main__.py  _shared.py  mcp_server_research.py  server.py  tools_businesses.py  tools_prospects.py
src/explorium_mcp_server/models/: _shared.py  businesses.py  enum_types.py  enums.py  prospects.py
src/explorium_mcp_server/storage/: __init__.py  session.py
src/explorium_mcp_server/tools/: __init__.py  businesses.py  prospects.py  session.py  shared.py
src/mcp_explorium/: _shared.py  server.py  server_old.py  tools_businesses.py  tools_prospects.py
src/mcp_explorium/models/: __init__.py  businesses.py  prospects.py  utils.py
tests/: test_session_storage.py
