[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "explorium-mcp-server"
version = "0.1.0"
description = "MCP server for interacting with the Explorium API."
readme = "README-pypi.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "mcp[cli]>=1.3.0",
    "requests>=2.32.3",
]

[project.scripts]
explorium-mcp-server = "explorium_mcp_server.__main__:main"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
]
