[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "explorium-mcp-server"
version = "0.1.2"
description = "MCP server for interacting with the Explorium API."
readme = "README-pypi.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
    "mcp[cli]>=1.3.0",
    "pydantic>=2.10.6",
]

[project.scripts]
explorium-mcp-server = "explorium_mcp_server.__main__:main"

[dependency-groups]
agent = [
    "langchain-core>=0.3.45",
    "langchain-mcp-adapters>=0.0.4",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.16",
]
dev = [
    "build>=1.2.2.post1",
    "dotenv>=0.9.9",
    "mcp[cli]>=1.3.0",
    "twine>=6.1.0",
    "uv>=0.6.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/explorium_mcp_server"]
