[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "explorium-mcp-server"
version = "0.1.2"
description = "MCP server for interacting with the Explorium API."
readme = "README-pypi.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "mcp[cli]>=1.3.0",
    "pydantic>=2.10.6",
    "shortuuid>=1.0.13",
]

[project.scripts]
explorium-mcp-server = "explorium_mcp_server.__main__:main"

[dependency-groups]
agent = [
    "langchain-anthropic>=0.3.10",
    "langchain-core>=0.3.45",
    "langchain-mcp-adapters>=0.0.4",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.16",
    "langgraph-api>=0.0.31",
    "langgraph-cli[inmem]>=0.1.77",
]
dev = [
    "build>=1.2.2.post1",
    "dotenv>=0.9.9",
    "mcp[cli]>=1.3.0",
    "twine>=6.1.0",
    "uv>=0.6.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/explorium_mcp_server"]
